[fix] make the button more visible
To story: https://www.pivotaltracker.com/story/show/66478494

--- a/app/assets/stylesheets/expert_main_menu.css.scss
+++ b/app/assets/stylesheets/expert_main_menu.css.scss
@@ -75,6 +75,10 @@
           font-family: 'LatoItalic';
           font-size: 14px;
         }
+
+        .btn {
+          line-height: 1em;
+        }
       }
     } // item body end
 
